--- a/invitation/index.html
+++ b/invitation/index.html
@@ -5419,7 +5419,7 @@
         top: 0px;
         left: 0px;
         background: center center/ cover no-repeat scroll content-box border-box
-          url("../content.pancake.vn/1/s517x776/fwebp/3c/3b/ca/e1/e12ca0e6af675d653327f5a3b5d2c7c2385f71d26b8fee7604b45828-w_1706-h_2560-l_224512-t_image/jpeg.jpg");
+          url("./images/11.jpg");
         --type: 0;
       }
       #w-xd4gq2s2 .image-background-compare {
@@ -5944,7 +5944,7 @@
         top: 0px;
         left: 0px;
         background: center center/ cover no-repeat scroll content-box
-          url(../content.pancake.vn/web-media/10/8a/c7/a3/4469b23a30640d824081431e33cfd219c78e0717425798aed85f1535-w_1080-h_1440-l_167192-t_image/jpeg.jpg)
+          url(./images/17.jpg)
           border-box;
         --type: 0;
       }
