--- a/invitation/index.html
+++ b/invitation/index.html
@@ -5,9 +5,16 @@
     http-equiv="content-type"
     content="text/html;charset=utf-8"
   /><!-- /Added by HTTrack -->
-  <head>
+    <head>
+      <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <meta charset="UTF-8" />
-    <title>Thư mời cưới Quốc Anh & Hoàng Tuyết</title>
+    <title>Thư mời cưới Quốc Anh - Hoàng Tuyết</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
