--- a/invitation/index.html
+++ b/invitation/index.html
@@ -3304,7 +3304,7 @@
       }
       #w-__popup_default__ .popup-background {
         background: center center/ cover no-repeat content-box border-box
-          url("https://content.pancake.vn/1/s800x1069/fwebp/16/9e/a4/ac/762f2d7becdeecc1d0ebaa1eda69eff9d1e3c531d99eca87e1781fcc-w:1079-h:1441-l:202842-t:image/jpeg.jpg");
+          url("./images/51.jpg");
         border-color: rgba(0, 0, 0, 0.8);
         border-radius: 13px;
         border-style: solid;
@@ -6428,7 +6428,7 @@
       }
       #w-__popup_default__ .popup-background {
         background: center center/ cover no-repeat content-box border-box
-          url("https://content.pancake.vn/1/s800x1069/fwebp/16/9e/a4/ac/762f2d7becdeecc1d0ebaa1eda69eff9d1e3c531d99eca87e1781fcc-w:1079-h:1441-l:202842-t:image/jpeg.jpg");
+          url("./images/51.jpg");
         border-color: rgba(0, 0, 0, 0.8);
         border-radius: 13px;
         border-style: solid;
