--- a/invitation/url-generator.html
+++ b/invitation/url-generator.html
@@ -2,9 +2,15 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Base64 Link Generator với Notification</title>
+  <title>Base64 Link Generator</title>
 
-  <!-- Thêm CSS Toastify từ CDN -->
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+
+  <!-- Toastify CSS -->
   <link
     rel="stylesheet"
     type="text/css"
@@ -13,145 +19,86 @@
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       background: #f9f9f9;
     }
-    .container {
-      max-width: 600px;
-      width: 90%;
+    .container-box {
       background: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      margin-top: 20px;
-    }
-    textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0 10px;
-      font-size: 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-    }
-    button {
-      background-color: #ff5a5f;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #e04848;
-    }
-    .link-row {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 10px;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
     .output {
       background: #f1f1f1;
       padding: 10px;
-      border-radius: 4px;
+      border-radius: 6px;
       word-break: break-all;
-      flex: 1;
     }
   </style>
 </head>
-<body>
+<body class="d-flex justify-content-center align-items-center" style="margin-top: 20px;">
 
-  <div class="container">
-    <h2>Base64 Link Generator</h2>
+  <div class="container container-box">
+    <h4 class="mb-3 text-center">Base64 Link Generator</h4>
 
-    <label for="message">Nhập message:</label>
-    <textarea id="message" rows="3" placeholder="Nhập text ở đây..."></textarea>
+    <div class="mb-3">
+      <label class="form-label fw-bold">Nhập message</label>
+      <textarea id="message" class="form-control" rows="3" placeholder="Nhập text ..."></textarea>
+    </div>
 
-    <button onclick="generateLink()">Tạo link</button>
+    <div class="d-grid gap-2 mb-4">
+      <button onclick="generateLink()" class="btn btn-danger">Tạo link</button>
+    </div>
 
-    <h3>Link hoàn chỉnh:</h3>
-    <div class="link-row">
-      <div class="output" id="outputLink">
+    <label class="form-label fw-bold">Link hoàn chỉnh:</label>
+    <div class="input-group">
+      <div id="outputLink" class="output form-control">
         https://htuyet-qanh-wedding.site?guest=
       </div>
-      <button onclick="copyLink()">Copy link</button>
+      <button onclick="copyLink()" class="btn btn-success">Copy</button>
     </div>
   </div>
 
-  <!-- Thêm JS Toastify từ CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <script>
-    function generateLink() {
-      const msg = document.getElementById('message').value;
-      if (!msg) {
-        Toastify({
-          text: "Vui lòng nhập message!",
-          duration: 3000,
-          close: true,
-          gravity: "top",
-          position: "center",
-          backgroundColor: "linear-gradient(to right, #FF5A5F, #E04848)"
-        }).showToast();
-        return;
-      }
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-      // Encode sang Base64
+  <!-- Toastify JS -->
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+  <script>
+    function notify(msg, success=true) {
+      Toastify({
+        text: msg,
+        duration: 2500,
+        close: true,
+        gravity: "top",
+        position: "center",
+        style: {
+          background: success
+            ? "linear-gradient(to right, #00b09b, #96c93d)"
+            : "linear-gradient(to right, #FF5A5F, #E04848)"
+        }
+      }).showToast();
+    }
+
+    function generateLink() {
+      const msg = document.getElementById('message').value.trim();
+      if (!msg) return notify("Vui lòng nhập message!", false);
+
       const base64Msg = btoa(unescape(encodeURIComponent(msg)));
       const fullLink = `https://htuyet-qanh-wedding.site?guest=${base64Msg}`;
       document.getElementById('outputLink').textContent = fullLink;
 
-      Toastify({
-        text: "Tạo link thành công!",
-        duration: 3000,
-        close: true,
-        gravity: "top",
-        position: "center",
-        backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)"
-      }).showToast();
+      notify("Tạo link thành công!");
     }
 
     function copyLink() {
-      const linkEl = document.getElementById('outputLink');
-      const range = document.createRange();
-      range.selectNodeContents(linkEl);
-      const sel = window.getSelection();
-      sel.removeAllRanges();
-      sel.addRange(range);
+      const text = document.getElementById('outputLink').textContent;
 
-      let success = false;
-      try {
-        success = document.execCommand('copy');
-      } catch (err) {
-        success = false;
-      }
-
-      sel.removeAllRanges();
-
-      if (success) {
-        Toastify({
-          text: "Link đã được copy!",
-          duration: 3000,
-          close: true,
-          gravity: "top",
-          position: "center",
-          backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)"
-        }).showToast();
-      } else {
-        Toastify({
-          text: "Copy thất bại, vui lòng copy thủ công.",
-          duration: 3000,
-          close: true,
-          gravity: "top",
-          position: "center",
-          backgroundColor: "linear-gradient(to right, #FF5A5F, #E04848)"
-        }).showToast();
-      }
+      navigator.clipboard.writeText(text).then(() => {
+        notify("Đã copy vào clipboard!");
+      }).catch(() => {
+        notify("Copy thất bại!", false);
+      });
     }
   </script>
 
